@@ -15,10 +15,7 @@ eval {
 
 isa_ok($@, 'autodie::exception');
 
-TODO: {
-    local $TODO = "Bug, possibly fixed on branch caller-bug";
-    is($@->caller, 'main::foo', "Caller should be main::foo");
-}
+is($@->caller, 'main::foo', "Caller should be main::foo");
 
 sub foo {
     use autodie;
@@ -31,12 +28,7 @@ eval {
 
 isa_ok($@, 'autodie::exception');
 
-is($@->line, $Caller_helper::line,     "External line number check");
-is($@->file, $INC{"Caller_helper.pm"}, "External filename check");
-is($@->package, "Caller_helper",       "External package check");
-
-
-TODO: {
-    local $TODO = "Bug, possibly fixed on branch caller-bug";
-    is($@->caller, "Caller_helper::foo",   "External subname check");
-}
+is($@->line,     $Caller_helper::line,     "External line number check");
+is($@->file,     $INC{"Caller_helper.pm"}, "External filename check");
+is($@->package, "Caller_helper",           "External package check");
+is($@->caller,  "Caller_helper::foo",      "External subname check");
